fix spacing between entries in roster to avoid wrapping

--- a/css/roster.css
+++ b/css/roster.css
@@ -72,7 +72,7 @@
 }
 
 #main .group.container .roster .entry {
-    padding: 1em 1em 1.6em;
+    padding: 1em 0.8em 1.6em;
 }
 
 #main .group.container .roster .entry .name {
